[project]
name = "corekit"
version = "0.5.0"
description = "App3 shared platform utilities"
authors = [
    { name = "Vincent Corriveau", email = "vincent.corriveau89@gmail.com" }
]

requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "Flask==3.1.3",
    "python-json-logger==4.1.0",
    "prometheus-flask-exporter==0.23.2",
    "redis==8.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "coverage==7.14.0",
    "pytest-cov==7.1.0"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
